--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 report/ filter=lfs diff=lfs merge=lfs -text
-#report/**/*.pdf filter=lfs diff=lfs merge=lfs -text
+report/**/*.pdf filter=lfs diff=lfs merge=lfs -text
